src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Resources__c</fullName>
        <label>Additional Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Contains Knowledge article content</description>
        <label>Content</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
</CustomObject>